--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@tailwindcss/vite": "^4.1.12",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.540.0",
+    "pdf-lib": "^1.17.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.1",
+    "sweetalert2": "^11.22.5",
     "tailwindcss": "^4.1.12",
     "xlsx": "^0.18.5"
   },
