fix: fix searching and filtering issue

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_BASE_URL =https://4g1hr9q7-8000.inc1.devtunnels.ms
+VITE_BASE_URL =https://api.nkprosales.com
+# https://4g1hr9q7-8000.inc1.devtunnels.ms
