--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_BASE_URL =https://4g1hr9q7-8000.inc1.devtunnels.ms
-# VITE_BASE_URL =https://api.nkprosales.com
+# VITE_BASE_URL =https://4g1hr9q7-8000.inc1.devtunnels.ms
+VITE_BASE_URL =https://api.nkprosales.com
  
