--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_BASE_URL =https://devapi.nkprosales.com/admin
+VITE_BASE_URL =https://devapi.nkprosales.com
 # VITE_BASE_URL =https://api.nkprosales.com
  
